<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="20">


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <TextView
                android:id="@+id/input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:text=""
                android:textSize="@dimen/displayTextSize" />
        </HorizontalScrollView>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:weightSum="6">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="4">

                <Button
                    android:id="@+id/openingBracket"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/openingBracket"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/closingBracket"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/closingBracket"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/clean"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/colorAccent"
                    android:onClick="clear"
                    android:text="@string/clean"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/buttonTextSize" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="4">

                <Button
                    android:id="@+id/ternaryQuestion"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/ternaryQuestion"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/ternaryColon"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/ternaryColon"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/allClear"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="clearAll"
                    android:text="@string/allClean"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/divide"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/divide"
                    android:textSize="@dimen/buttonTextSize" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="4">

                <Button
                    android:id="@+id/digit7"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/digit7"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/digit8"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/digit8"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/digit9"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/digit9"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/multiply"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/multiply"
                    android:textSize="@dimen/buttonTextSize" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="4">

                <Button
                    android:id="@+id/digit4"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/digit4"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/digit5"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/digit5"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/digit6"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/digit6"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/subtract"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/subtract"
                    android:textSize="@dimen/buttonTextSize" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="4">

                <Button
                    android:id="@+id/digit1"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/digit1"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/digit2"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/digit2"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/digit3"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/digit3"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/add"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/add"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/buttonTextSize" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="4">

                <Button
                    android:id="@+id/digit0"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/digit0"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/dot"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="print"
                    android:text="@string/dot"
                    android:textSize="@dimen/buttonTextSize" />

                <Button
                    android:id="@+id/equality"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/colorAccent"
                    android:onClick="compute"
                    android:text="@string/equality"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/buttonTextSize" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>